# kizilelma

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  kizilelma.db  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: auto-refresh.yml  daily-report.yml  historical-data.yml  test.yml
docs/: kullanim-klavuzu.md  kurulum.md  railway-deploy.md
kizilelma/: __init__.py  config.py  main.py  models.py
kizilelma/agent/: __init__.py  cache.py  chat.py  retriever.py
kizilelma/ai_advisor/: __init__.py  advisor.py  formatters.py  prompts.py
kizilelma/analyzers/: __init__.py  ranker.py  returns.py  risk.py
kizilelma/collectors/: __init__.py  base.py  bist.py  eurobond.py  macro.py  news.py  tags.py  tcmb.py  tefas.py
kizilelma/scheduler/: __init__.py  daily_job.py
kizilelma/storage/: __init__.py  db.py  models.py
kizilelma/telegram_bot/: __init__.py  bot.py  formatters.py
kizilelma/web/: __init__.py  app.py
scripts/: collect_fund_history.py  collect_historical_data.py  smoke_test.py
tests/: test_config.py  test_main.py  test_models.py
tests/agent/: test_chat.py  test_retriever.py
tests/ai_advisor/: test_advisor.py  test_formatters.py  test_prompts.py
tests/analyzers/: test_ranker.py  test_returns.py  test_risk.py
tests/collectors/: test_base.py  test_bist.py  test_eurobond.py  test_macro.py  test_news.py  test_tags.py  test_tcmb.py  test_tefas.py
tests/fixtures/: bist_dibs.html  eurobond_response.json  fonrehberi_detail_afa.html  fonrehberi_detail_tge.html  fonrehberi_detail_yhs.html  fonrehberi_list.html  news_feed.xml  (+3 more)
(+14 files in other folders)
